<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".SecondActivity" android:background="@color/colorAccent">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.88"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.07"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline7"
            app:layout_constraintGuide_percent="0.04"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline8"
            app:layout_constraintGuide_percent="0.96"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline9"
            app:layout_constraintGuide_begin="192dp"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10" app:layout_constraintGuide_percent="0.73"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline11" app:layout_constraintGuide_percent="0.48"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline12" app:layout_constraintGuide_percent="0.85"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline13"
            app:layout_constraintGuide_percent="0.15"/>
    <ImageView
            android:layout_width="165dp"
            android:layout_height="177dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintStart_toStartOf="@+id/guideline7"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:contentDescription="@string/imagegame" android:background="@android:color/background_dark"
            android:padding="1dp"/>
    <TextView
            android:text="@string/game_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toStartOf="@+id/guideline8"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline7" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="30sp" android:textStyle="bold|italic"
            android:textColor="@android:color/holo_blue_bright"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textName"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textStyle="bold"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="@+id/guideline6"/>
    <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textType" app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textName" android:textStyle="bold"/>
    <TextView
            android:text="@string/nb_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textNbPlayers" app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textType" android:textStyle="bold"/>
    <TextView
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textYear"
            app:layout_constraintTop_toBottomOf="@+id/textNbPlayers" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline9" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textDescription" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline11" app:layout_constraintEnd_toStartOf="@+id/guideline8"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline7" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/do_you_want_to_know_more"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:id="@+id/knowMore" app:layout_constraintEnd_toStartOf="@+id/guideline12"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline13" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline10"/>
</android.support.constraint.ConstraintLayout>