<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity" android:background="@color/colorAccent"
                                             tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.2"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.109375"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.9"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.8"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.5"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageTopLeft" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintEnd_toStartOf="@+id/guideline6"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:contentDescription="@string/imagetopleft"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageTopRight" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintStart_toStartOf="@+id/guideline6"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:contentDescription="@string/imagetopright"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageBottomLeft"
            app:layout_constraintTop_toTopOf="@+id/guideline5" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toStartOf="@+id/guideline6"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:contentDescription="@string/imagebottomleft"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageBottomRight"
            app:layout_constraintTop_toTopOf="@+id/guideline5" app:layout_constraintStart_toStartOf="@+id/guideline6"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            android:contentDescription="@string/imagebotoomright"/>
</android.support.constraint.ConstraintLayout>